--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@
     font-family:"League Spartan",sans-serif;
 }
 
+button.normal{
+    font-size: 14px;
+    font-weight: 600;
+    padding: 15px 30px;
+    color: #000;
+    background-color: #fff;
+    border-radius: 4px;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    transition: 0.3s;
+}
+
 h1{
     font-size: 50px;
     line-height: 64px;
@@ -253,4 +266,43 @@ body{
     position: absolute;
     bottom: 20px;
     right: 10px;
+}
+
+.section-m1{
+    margin: 40px 0;
+}
+
+#banner{
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     text-align: center;
+     background-image: url("img/banner/b2.jpg");
+     background-position: center;
+     width: 100%;
+     height: 40vh;
+     background-size: cover;
+}
+
+#banner h4{
+    color: #fff;
+    font-size: 16px;
+}
+
+#banner h2{
+    color: #fff;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner h2 span{
+    color: #ef3636;
+    font-size: 30px;
+    padding: 10px 0;
+}
+
+#banner button:hover{
+    background-color: #088178;
+    color: #fff;
 }
