--- a/style.css
+++ b/style.css
@@ -20,6 +20,19 @@ button.normal{
     transition: 0.3s;
 }
 
+button.white{
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+    border: 1px solid #fff;
+    transition: 0.2s;
+}
+
+
 h1{
     font-size: 50px;
     line-height: 64px;
@@ -305,4 +318,144 @@ body{
 #banner button:hover{
     background-color: #088178;
     color: #fff;
+}
+
+#sm-banner{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 40px 50px;
+}
+
+#sm-banner .banner-box{
+    display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: flex-start;
+     background-image: url("img/banner/b17.jpg");
+     background-position: center;
+     min-width: 580px;
+     height: 50vh;
+     background-size: cover;
+     padding: 30px;
+}
+
+#sm-banner .banner-box2{
+    background-image: url("img/banner/b10.jpg");
+}
+
+#sm-banner h4{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+#sm-banner h2{
+    color: #fff;
+    font-size: 28px;
+    font-weight: 800;
+}
+
+#sm-banner span{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    padding-bottom: 15px;
+}
+
+#sm-banner .banner-box:hover button{
+    background-color: #088178;
+    border: 1px solid #088178;
+}
+
+#banner3{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0 80px;
+    flex-wrap: wrap;
+}
+#banner3 .banner-box{
+    display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: flex-start;
+     background-image: url("img/banner/b7.jpg");
+     background-position: center;
+     min-width: 30%;
+     height: 30vh;
+     background-size: cover;
+     padding: 20px;
+     margin-bottom: 20px;
+}
+
+#banner3 .bannerbox2{
+    background-image: url("img/banner/b4.jpg");
+}
+
+#banner3 .bannerbox3{
+    background-image: url("img/banner/b18.jpg");
+}
+
+#banner3 h2{
+    color: #fff;
+    font-weight: 900;
+    font-size: 22px;
+}
+
+#banner3 h3{
+    color: #ec544e;
+    font-weight: 800;
+    font-size: 15px;
+}
+
+#newsletter{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url("img/banner/b14.png");
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
+    background-color: #041e42;
+}
+
+#newsletter h4{
+    font-size: 22px;
+    font-weight: 700;
+    color: #fff;
+}
+
+#newsletter p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #818ea0;
+}
+
+#newsletter p span{
+    color: #ffbd27;
+}
+
+#newsletter input{
+    font-size: 14px;
+    height: 3.125rem;
+    padding: 0 1.25rem;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+#newsletter button{
+    background-color: #088178;
+    color: #fff;
+    white-space: nowrap;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+}
+
+#newsletter .form{
+    display: flex;
+    width: 40%;
 }
