--- a/style.css
+++ b/style.css
@@ -636,8 +636,7 @@ footer .copyright {
 
   #feature {
     justify-content: space-evenly;
-
-}
+  }
 
   #banner {
     height: 40vh;
@@ -662,11 +661,43 @@ footer .copyright {
   #banner3 .banner-box {
     width: 100%;
   }
-  #newsletter{
+  #newsletter {
     padding: 40px 20px;
   }
 
   #newsletter .form {
     width: 100%;
   }
+}
+
+/*shop page*/
+
+#page-header {
+  background-image: url("img/banner/b1.jpg");
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  flex-direction: column;
+  padding: 14px;
+}
+
+#page-header h2,
+#page-header p {
+  color: #fff;
+}
+
+#pagination {
+  text-align: center;
+}
+
+#pagination a{
+  text-decoration: none;
+  background-color: #088178;
+  padding: 15px 20px;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 3px;
 }
