--- a/style.css
+++ b/style.css
@@ -705,6 +705,26 @@ footer .copyright {
   #blog .blog-details{
     width: 100%;
   }
+
+  /* Blog page */
+
+  #about-head{
+    flex-direction: column;
+  }
+
+  #about-head img{
+    width: 100%;
+    margin-left: 25%;
+    margin-bottom: 20px;
+  }
+
+  #about-head div{
+    padding-left: 0px;
+  }
+
+  #about-app .video{
+    width: 100%;
+  }
 }
 
 /*shop page*/
@@ -868,4 +888,41 @@ footer .copyright {
   font-weight: 700;
   color: #c9cbce;
   z-index: -9;
+}
+
+/*Blog page*/
+
+/*About page*/
+
+#page-header.about-header{
+  background-image: url("img/about/banner.png");
+}
+#about-head{
+  display: flex;
+  align-content: center;
+}
+
+#about-head img{
+  width: 50%;
+  height: auto;
+}
+
+#about-head div{
+  padding-left: 40px;
+}
+
+#about-app{
+  text-align: center;
+}
+
+#about-app .video{
+  width: 70%;
+  height: 100%;
+  margin: 30px auto 0 auto;
+}
+
+#about-app .video video{
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
 }
