--- a/style.css
+++ b/style.css
@@ -926,3 +926,59 @@ footer .copyright {
   height: 100%;
   border-radius: 20px;
 }
+/*About page*/
+
+/*Contact page*/
+
+#contact-details{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
+#contact-details .details{
+  width: 40%;
+}
+
+#contact-details .details span{
+  font-style: 12px;
+}
+
+#contact-details .details h2{
+  font-size: 32px;
+  line-height: 35px;
+  padding: 20px 0;
+}
+
+#contact-details .details h3{
+  font-size: 16px;
+  padding-bottom: 15px;
+}
+
+#contact-details .details li{
+  list-style: none;
+  display: flex;
+  padding: 10px 0;
+}
+
+#contact-details .details li i{
+  font-size: 14px;
+  padding-right: 22px;
+}
+
+#contact-details .details li p{
+  margin: 0;
+  font-size: 14px;
+}
+
+#contact-details .map{
+  width: 55%;
+  height: 400px;
+}
+
+#contact-details .map iframe{
+  width: 100%;
+  height: 100%;
+}
+
+/*Contact page*/
